--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <h1>Click the Button to Continue</h1>
 
-    <button onclick="window.location.href='https://shivanshudagar777.github.io/mazenet/';">
+    <a href="https://shivanshudagar777.github.io/mazenet/">Go to Site B</a>
         Go to Website
     </button>
 
