--- a/index.html
+++ b/index.html
@@ -42,10 +42,20 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </style>
 </head>
 <body>
+
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TZBFKZ64"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+
+<div class="container">
+    <h1>Welcome</h1>
+    <p>Select a page:</p>
+
+    <a class="btn" href="contact.html">Go to Contact Form</a>
+    <a class="btn" href="cart.html">Go to Add to Cart Page</a>
+</div>
+
     <h1>Click the Button to Continue</h1>
 
     <a href="https://shivanshudagar777.github.io/mazenet/">Go to Site B</a>
